# vigil

./: .cursorrules  .gitguardian.yaml  .gitignore  .vigil.yml.example  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/actions/vigil-test/: action.yml
.github/workflows/: ci.yml  demo-e2e.yml  vigil.yml
docs/: architecture.md  cli-reference.md  ecosystem-guide.md  forensics.md  gitguardian.md  integration-guide.md  loop.md  phase-status.md  quickstart.md  snapshot-format.md  test-results.md  userguide.md
examples/frameworks/: README.md  anthropic_quickstart.py  langchain_quickstart.py  langgraph_swarm_quickstart.py  openai_assistants_quickstart.py
examples/full_loop_demo/: README.md  app.py  hardened_prompt.txt  run_end_to_end.sh  run_loop.sh  system_prompt.txt  test_act1_display.py  vulnerable_prompt.txt
examples/full_loop_demo/sample-logs/: trace-001.json  trace-002.json  trace-003.json
examples/full_loop_demo/sample_logs/: production-logs.jsonl
src/vigil/: __init__.py  __main__.py  cli.py  config.py  models.py
src/vigil/attacks/: __init__.py  community-context-dump.bp.json  community-exfiltration-url.bp.json  community-indirect-injection.bp.json  community-jailbreak-roleplay.bp.json  community-pii-extraction.bp.json  community-prompt-override.bp.json
src/vigil/breakpoint/: __init__.py  aggregator.py  config_loader.py  errors.py  evaluator.py  models.py  reason_codes.py  waivers.py
src/vigil/breakpoint/config/: __init__.py  default_policies.json
src/vigil/breakpoint/policies/: __init__.py  base.py  cost.py  drift.py  latency.py  output_contract.py  pii.py  red_team.py
src/vigil/canari/: __init__.py  adapters.py  alerter.py  client.py  detection.py  generator.py  incidents.py  injector.py  integrations.py  models.py  registry.py  scanner.py
src/vigil/forensics/: __init__.py  engine.py  models.py  parsers.py  reporting.py
src/vigil/intel/: __init__.py  scorer.py
src/vigil/loop/: __init__.py  diff_aware.py  exporter.py  heal.py  heal_intelligent.py  library.py  replayer.py  swarm.py
src/vigil/network/: __init__.py  corpus.py  digest.py  exchange.py  intel.py  sanitizer.py  sync.py
tests/: test_cli.py  test_diff_aware.py  test_exporter.py  test_full_loop.py  test_heal.py  test_heal_intelligent.py  test_network_corpus.py  test_network_digest.py  test_network_exchange.py  test_network_intel.py  test_network_sanitizer.py  test_network_sync.py  test_replayer.py  test_scorer.py  test_snapshot_format.py  test_swarm.py
tests/attacks/: community-context-dump.bp.json  community-exfiltration-url.bp.json  community-indirect-injection.bp.json  community-jailbreak-roleplay.bp.json  community-pii-extraction.bp.json  community-prompt-override.bp.json
(+18 files in other folders)
